--- a/style.css
+++ b/style.css
@@ -884,6 +884,11 @@ main {
   font-weight: var(--fw-300);
   line-height: 1.6;
 }
+.timeline-text ul li {
+  color: var(--light-gray);
+  font-weight: var(--fw-300);
+  line-height: 1.6;
+}
 
 /**
  * skills 
